# mpi-word-count

./: CMakeLists.txt  build_debug.sh  build_release.sh  errors.h  fs_utils.c  fs_utils.h  hash_map.h  linked_list.c  linked_list.h  log.c  main.c  readme.md  wc_constants.h  wc_core.h  wc_mpi_helpers.h  wc_utils.c  wc_utils.h
docs/: sequence.puml
src/: fs_utils.c  fs_utils.h  hash_map.h  hash_map_crc.h  wc_core.h  wc_mpi_helpers.h  wc_utils.c
temp_test_dir/: t4.txt
test_dir/: dataset_generator.py  t1.txt  t2.txt  t3.txt  t4.txt  t5.txt
